# llminfer

./: CMakeLists.txt
gtest/base/: test_alloc.cpp
include/base/: alloc.h  base.h  buffer.h
include/layer/: layer.h
include/models/llama2/: llama2.h
include/tensor/: tensor.h
source/base/: buffer.cpp
source/main/: main.cpp  main.cu
source/models/llama2/: llama2.cpp
source/tensor/: tensor.cpp
